--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
             'com.codeborne:selenide:6.19.1',
             'org.junit.jupiter:junit-jupiter:5.10.1',
             'org.slf4j:slf4j-simple:2.0.5',
+            'com.github.javafaker:javafaker:1.0.2',
     )
 }
 
