--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,25 @@
 
 plugins {
     id 'java-library'
+    id 'io.qameta.allure' version '2.11.2'
 }
 
 repositories {
     mavenCentral()
+}
+
+allure {
+    report {
+        version.set("2.19.0")
+    }
+    adapter { // отвечает за появление папочки build/allure-results
+        aspectjWeaver.set(true) //обработка аннотации @Step
+        frameworks {
+            junit5 { //название фреймворка
+                adapterVersion.set("2.19.0") //версия интеграции фреймворка и Allure
+            }
+        }
+    }
 }
 
 compileTestJava {
@@ -17,6 +32,7 @@ dependencies {
             'org.junit.jupiter:junit-jupiter:5.10.1',
             'org.slf4j:slf4j-simple:2.0.5',
             'com.github.javafaker:javafaker:1.0.2',
+            'io.qameta.allure:allure-selenide:2.25.0',
     )
 }
 
