--- a/build.gradle
+++ b/build.gradle
@@ -39,3 +39,9 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+task remote_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("remote")
+    }
+}
