--- a/build.gradle
+++ b/build.gradle
@@ -45,3 +45,8 @@ task remote_test(type: Test) {
         includeTags("remote")
     }
 }
+
+tasks.withType(Test) {
+    systemProperties(System.getProperties())
+    useJUnitPlatform()
+}
